--- a/core/templates/oim_chart.html
+++ b/core/templates/oim_chart.html
@@ -46,10 +46,10 @@
             <td colspan="1">TOTAL</td>
             {% if periodo_list|keyvalue:year == 'I' %}
                 <td colspan="1" class="text-right">{{ asignado|million|intcomma }}</td>
-                <td colspan="1" class="text-right">{{ asignado_porcentaje|floatformat:"0" }}</td>
+                <td colspan="1" class="text-right">{{ asignado_porcentaje|floatformat:"0" }}%</td>
             {% else %}
                 <td colspan="1" class="text-right">{{ ejecutado|million|intcomma|default:"0" }}</td>
-                <td colspan="1" class="text-right">{{ ejecutado_porcentaje|floatformat:"0" }}</td>
+                <td colspan="1" class="text-right">{{ ejecutado_porcentaje|floatformat:"0" }}%</td>
             {% endif %}
         </tr>
         </tfoot>
@@ -423,27 +423,27 @@
     <div id="detail-3" class="container medium">
         <div class="row">
             <div class="col-xs-12 col-md-12 table-responsive">
-                 <table class="table">
+                <table class="table">
                     <thead>
-                        <tr class="bg-primary">
-                            <th rowspan="2" colspan="1"></th>
-                            {% for year in year_list %}
+                    <tr class="bg-primary">
+                        <th rowspan="2" colspan="1"></th>
+                        {% for year in year_list %}
                             <th rowspan="1" colspan="2" class="text-center" style="border-bottom: none">
                                 <strong>{{ year }}</strong>
                                 {% if periodo_list|keyvalue:year == 'A' %}*Actualizado*{% endif %}
                             </th>
-                            {% endfor %}
-                        </tr>
-                        <tr class="bg-primary">
-                            {% for year in year_list %}
+                        {% endfor %}
+                    </tr>
+                    <tr class="bg-primary">
+                        {% for year in year_list %}
                             <th rowspan="1" colspan="1" style="border-top: none" class="text-center">
-                               Cordobas
+                                Cordobas
                             </th>
                             <th rowspan="1" colspan="1" style="border-top: none" class="text-center">
-                               Porcentaje
+                                Porcentaje
                             </th>
-                            {% endfor %}
-                        </tr>
+                        {% endfor %}
+                    </tr>
                     </thead>
                     <tbody>
                     {% for key, data in porano.items %}
@@ -458,7 +458,7 @@
                         </tr>
                     {% endfor %}
                     </tbody>
-            </table>
+                </table>
             </div>
         </div>
     </div>
@@ -469,40 +469,68 @@
         <div class="container wide">
             <div class="row">
                 <div class="col-md-12">
-                    <h2><strong>Modificaciones al presupuesto</strong><br>
-                        municipal de ingresos </h2>
+                    <h2>
+                        <strong>Modificaciones al presupuesto</strong>
+                        <br>
+                        municipal de ingresos
+                    </h2>
                     <h4>Millones de cordobas</h4>
                     <hr class="pma-line-2"/>
                 </div>
             </div>
             <div class="row">
-                <div class="col-md-offset-2 col-md-8 table-responsive">
+                <div class="col-md-offset-2 col-md-9 table-responsive">
                     <table class="table table-condensed table-striped">
                         <thead>
                         <tr class="bg-primary">
-                            <th>Rubros de ingresos</th>
-                            <th>Inicial</th>
-                            <th>Actualizado</th>
-                            <th>Ejecutado</th>
+                            <th rowspan="2" colspan="1">Rubros de ingresos</th>
+                            <th colspan="2" class="text-center" style="border-bottom: none;">Inicial</th>
+                            <th colspan="2" class="text-center" style="border-bottom: none;">Actualizado</th>
+                            <th colspan="2" class="text-center" style="border-bottom: none;">Ejecutado</th>
+                        </tr>
+                        <tr class="bg-primary">
+                            <th colspan="1" style="border-top: none;">Cordobas</th>
+                            <th colspan="1" style="border-top: none;">Porcentaje</th>
+                            <th colspan="1" style="border-top: none;">Cordobas</th>
+                            <th colspan="1" style="border-top: none;">Porcentaje</th>
+                            <th colspan="1" style="border-top: none;">Cordobas</th>
+                            <th colspan="1" style="border-top: none;">Porcentaje</th>
                         </tr>
                         </thead>
+                        <tbody>
                         {% for row in rubros %}
+                            {% if forloop.counter <= 1 %}
+                                {{ row }}
+                            {% endif %}
                             <tr>
                                 <td class="pull-left">{{ row.subsubtipoingreso__origen__nombre }}</td>
                                 <td class="text-right">{{ row.inicial_asignado|million|intcomma }}</td>
-                                <td class=" text-right">{{ row.actualizado_asignado|million|intcomma }}</td>
+                                <td class="text-right">{{ row.inicial_asignado_percent }}%</td>
+                                <td class="text-right">{{ row.actualizado_asignado|million|intcomma }}</td>
+                                <td class="text-right">{{ row.actualizado_asignado_percent }}%</td>
                                 <td class="text-right">
-                                    {% if row.final_ejecutado %}{{ row.final_ejecutado|million|intcomma }}{% else %}
-                                        0{% endif %}</td>
+                                    {% if row.final_ejecutado %}
+                                        {{ row.final_ejecutado|million|intcomma }}
+                                    {% else %}
+                                        0
+                                    {% endif %}
+                                </td>
+                                <td class="text-right">
+                                     {{ row.ejecutado_percent }}%
+                                </td>
                             </tr>
                         {% endfor %}
+                        </tbody>
                         <tfoot>
-                        <tr class="bold">
-                            <td>TOTAL</td>
-                            <td class="text-right">{{ rubros|total_sum:'inicial_asignado'|million|intcomma }}</td>
-                            <td class="text-right">{{ rubros|total_sum:'actualizado_asignado'|million|intcomma }}</td>
-                            <td class="text-right">{{ rubros|total_sum:'final_ejecutado'|million|intcomma }}</td>
-                        </tr>
+                            <tr class="bold">
+                                <td>TOTAL</td>
+                                <td class="text-right">{{ rubros|total_sum:'inicial_asignado'|million|intcomma }}</td>
+                                <td class="text-right">{{ asignado_porcentaje|floatformat:"0" }}%</td>
+                                <td class="text-right">{{ rubros|total_sum:'actualizado_asignado'|million|intcomma }}</td>
+                                <td class="text-right">{{ actualizado_porcentaje|floatformat:"0" }}%</td>
+                                <td class="text-right">{{ rubros|total_sum:'final_ejecutado'|million|intcomma }}</td>
+                                <td class="text-right">{{ ejecutado_porcentaje|floatformat:"0" }}%</td>
+                            </tr>
                         </tfoot>
                     </table>
                 </div>
