agregando alto a los rubros que contienen tabla de inicial y ejecutado

--- a/core/templates/home.html
+++ b/core/templates/home.html
@@ -179,7 +179,7 @@
                     <hr class="pma-line-2">
                     <div class="row">
                         {% for gasto in totales_ogm %}
-                            <div class="col-xs-12 col-sm-6 col-md-6" style="min-height: 70px">
+                            <div class="col-xs-12 col-sm-6 col-md-6" style="min-height: 70px;height: 176px">
                                 <div class="info-box">
                                 <span class="info-box-icon pma-fg-green pma-icon {{ gasto.subsubtipogasto__origen__slug }}">
                                 </span>
